--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Masters in Information Security 
+  uni: CMU
+  year: August, 2021 &mdash; May, 2023
   # awards:
-  # summary:
+  summary: Best course in the world.
